   - Feature: Error message if content type is not supported
   - Bugfix: Typo in mini help(thanks to Clytie Siddall for reporting this bug)
   - Bugfix: Bugs regarding the word "mail" (thanks to Clytie Siddall for
        reporting this bug)
   - Added Clytie Siddall to contributors
   - Feature: Support for "multipart/mixed" and "multipart/alternative" mails
 * Roland Stigge
   - Bugfix: Encoding of "po/fr.po"

Version 2.1.1
 * Nicolas Rougier
   - bugfix: gui, biff geometry field was sensitive when in gnome mode
   - bugfix: password automatic finding, misplaced mutex lock
   - bugfix: password automatic finding, port was no taken into account
   - bugfix: use delay instead of 1 second between FAM retries.
   - bugfix: change preferences ui
   - update: French translation
   - update: gnubiff.texi
   - bugfix: Remove use of the pseudo-capability greeting message in IMAP4
 * Robert Sowada
   - Changed version to 2.1.1, updated spec file
   - Small changes
   - Marked strings for internationalization (type & authentication menu)
   - Updated po files, German translation
   - Bugfix: Parsing local mails could trigger additional FAM events
     resulting in parsing mails another time (->infinite loop, 100% CPU load)
   - Translating copyright message in credits dialog simplified (po files are
     now independent of cuurent version)
   - Added decoding.cc to POTFILES.in
   - Bugfix: Setting mailbox status to old after new mail is displayed (thanks
     to Byron Foster for providing a patch)
   - Bugfix: Quick test for new mail while idling is not enogh (IMAP4; thanks
        to Byron Foster for providing a patch)
   - Added Byron Foster to Contributors
   - Bugfix: Don't crash if server's response is not valid (IMAP4; thanks to
        Calum Mackay for reporting this bug)
   - Feature: Applet and Popup now can be set to be sticky and be kept above
        all other windows
   - Bugfixes: Better error handling and bad connection handling (IMAP4;